// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrillIllustration /> renders correctly for a drill with a video from vimeo 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 250,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "height": 250,
          "justifyContent": "center",
        }
      }
    >
      <View
        style={
          Object {
            "position": "absolute",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#A6A6A6"
          hidesWhenStopped={true}
          size="large"
        />
        <Text>
          Loading...
        </Text>
      </View>
      <View
        pointerEvents="box-none"
        style={
          Object {
            "height": 250,
            "overflow": "hidden",
            "width": 750,
          }
        }
      >
        <ViewManagerAdapter_ExpoVideoView
          proxiedProperties={
            Object {
              "onError": [Function],
              "onFullscreenUpdate": [Function],
              "onLoad": [Function],
              "onLoadStart": [Function],
              "onReadyForDisplay": [Function],
              "onStatusUpdate": [Function],
              "resizeMode": "mock",
              "source": undefined,
              "status": Object {},
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexGrow": 0,
          "flexShrink": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginBottom": 20,
            "marginLeft": 20,
            "marginTop": 20,
          }
        }
      >
        20
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 6,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#232b2b",
            "fontSize": 20,
            "fontWeight": "bold",
            "marginBottom": 20,
            "marginLeft": 20,
            "marginTop": 20,
          }
        }
      >
        Rower Hamstring
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderColor": "#d5d5d5",
            "borderRadius": 12.5,
            "borderWidth": 2,
            "height": 25,
            "justifyContent": "center",
            "margin": 22.5,
            "width": 25,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DCDCDC",
        "borderBottomWidth": 1,
      }
    }
  />
  <View
    style={
      Object {
        "alignSelf": "flex-end",
        "flexDirection": "row",
        "marginTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexGrow": 0,
              "flexShrink": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#A6A6A6",
                "fontSize": 20,
                "marginBottom": 20,
                "marginLeft": 20,
                "marginTop": 20,
              }
            }
          >
            8
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 6,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#A6A6A6",
                "fontSize": 20,
                "marginBottom": 20,
                "marginLeft": 20,
                "marginTop": 20,
              }
            }
          >
            Full Clean
          </Text>
        </View>
        <View
          style={
            Object {
              "width": 70,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "borderBottomColor": "#DCDCDC",
            "borderBottomWidth": 1,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`<DrillIllustration /> renders correctly for a drill with animation 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "white",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "height": 667,
        },
        Object {
          "width": 750,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "bottom": 0,
          "flexDirection": "row",
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 30,
            "justifyContent": "center",
            "opacity": 1,
            "width": 30,
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 30,
            "justifyContent": "center",
            "opacity": 1,
            "width": 30,
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 30,
            "justifyContent": "center",
            "opacity": 1,
            "width": 30,
          }
        }
      >
        <Image
          source={1}
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "backgroundColor": "gray",
          "bottom": 10,
          "height": 10,
          "left": 20,
          "position": "absolute",
          "width": 630,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "black",
          "bottom": 10,
          "height": 10,
          "left": 20,
          "position": "absolute",
          "width": 0,
        }
      }
    />
  </View>
  <Text
    style={
      Object {
        "alignItems": "center",
        "color": "#232b2b",
        "fontSize": 16,
        "justifyContent": "center",
        "marginBottom": 20,
        "marginLeft": 20,
        "marginTop": 20,
      }
    }
  />
</View>
`;

exports[`<DrillIllustration /> renders correctly for a drill with no video nor animation 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "space-around",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#232b2b",
          "fontSize": 16,
          "fontWeight": "bold",
        }
      }
    >
       You have seen all the steps of the drill 
    </Text>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 40,
          "height": 80,
          "opacity": 1,
          "width": 80,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`<DrillIllustration /> renders correctly for a drill with video 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  onSwipeLeft={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "height": 250,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <RNCWebView
        cacheEnabled={true}
        javaScriptEnabled={true}
        messagingEnabled={false}
        onContentProcessDidTerminate={[Function]}
        onHttpError={[Function]}
        onLoadingError={[Function]}
        onLoadingFinish={[Function]}
        onLoadingProgress={[Function]}
        onLoadingStart={[Function]}
        onMessage={[Function]}
        onShouldStartLoadWithRequest={[Function]}
        source={
          Object {
            "uri": "https://www.youtube.com/embed/JkVHrA5o23o",
          }
        }
        style={
          Array [
            Object {
              "flex": 1,
              "overflow": "hidden",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
            undefined,
          ]
        }
        useSharedProcessPool={true}
      />
    </View>
  </View>
</View>
`;
